Switched to self-hosted fonts

--- a/css/_defaults.scss
+++ b/css/_defaults.scss
@@ -8,7 +8,7 @@ clear, .clear {
 }
 
 html, body {
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    font-family: "Open Sans Web", Helvetica, Arial, sans-serif;
     font-size: 16px;
     color: white;
     line-height: 1;
@@ -140,7 +140,7 @@ body {
     }
     
     .header-large {
-        font-weight: 600;
+        font-weight: 700;
         font-size: 48px;
         padding-bottom: 0;
         text-transform: uppercase;
@@ -169,7 +169,7 @@ body {
     }
     
     .header-med {
-        font-weight: 600;
+        font-weight: 700;
         font-size: 48px;
         padding-bottom: 0;
         text-transform: uppercase;
