Image backgrounds for cleaner load

--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -22,6 +22,7 @@
         border-radius: 4px;
         box-shadow: 0 5px 10px -3px rgba(25, 22, 29, 0.3);
         transition: opacity 0.23s;
+        background: rgba(18, 18, 31, 0.25);
         
         &:hover {
             opacity: 0.65;
