--- a/css/_defaults.scss
+++ b/css/_defaults.scss
@@ -267,6 +267,7 @@ body {
         display: block;
         will-change: transform;
         box-shadow: 0 5px 10px -3px rgba(25, 22, 29, 0.3);
+        background: linear-gradient(150deg, #dc781d 0%, #111f4c 90%, #111f4c 100%);
         
         @include appnav {
             border-width: 6px;
