Additional page load optimizations

--- a/css/_defaults.scss
+++ b/css/_defaults.scss
@@ -91,6 +91,11 @@ body {
             color: white !important;
             font-size: 16px;
             text-align: center;
+            
+            .title {
+                display: none;
+            }
+            
         }
         
         @include tablet {
@@ -168,50 +173,13 @@ body {
         }
     }
     
-    .header-med {
-        font-weight: 700;
-        font-size: 48px;
-        padding-bottom: 0;
-        text-transform: uppercase;
-        padding-top: 40px;
-        
-        @include appnav {
-            font-size: 32px;
-        }
-        
-        & + p {
-            margin-top: -30px;
-            padding-top: 0;
-            padding-bottom: 30px;
-            padding-bottom: 40px;
-            color: $cTextDefault;
-            text-align: center;
-            font-size: 18px;
-            
-            @include appnav {
-                margin-top: -20px;
-                font-size: 16px;
-            }
-            
-            strong {
-                color: $cTextDefault;
-            }
-        }
-    }
 }
 
 .page {
     padding-top: 60px;
-    //opacity: 0.7;
-    //transition: opacity 0.75s;
-    
-    &.scrolledEnteredBottom {
-        //opacity: 1;
-    }
     
     & + .page {
         margin-top: -110px;
-        //padding-top: 100px;
     }
 }
 
@@ -237,26 +205,7 @@ body {
         margin-top: -40px;
     }
     
-    &:before {
-        content: ' ';
-        display: none;
-        background: #33365a;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 245px;
-        
-        @include appnav {
-            display: block;
-            height: 280px;
-            background-image: url(../media/bg_815decacfdebafd683c2c3272857337b.jpg);
-            background-size: cover;
-        }
-        @include mobile {
-            height: 175px;
-        }
-    }
+
     
     .me {
         border-radius: 100%;
@@ -297,32 +246,63 @@ body {
     }
 }
 
-.text-center {
-    text-align: center;
-}
 
 p {
     line-height: 1.6;
-    
+}
+
+.portfolio-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.portfolio-item {
+    width: 49.1%;
+
+    @include tablet {
+        width: 100%;
+    }
+
+    img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
 }
 
 
-hr {
-    display: block;
-    width: 500px;
-    width: 100%;
-    max-width: 900px;
-    background: linear-gradient(to right, rgba(99,136,180,1) 0%,rgba(124,189,211,1) 100%);
-    background: rgba(white, 0.25);
-    height: 1px;
-    outline: none;
-    border: none;
-}
 
+.sidebar {
+    //padding: 23px;
+    position: fixed;
+    top:0;
+    left:0;
+    height: 100vh;
+    box-sizing: border-box;
+    z-index: 4;
 
-#footer {
-    p {
-        text-align: center;
-        font-size: 13px;
+    @include appnav {
+        top: auto;
+        bottom: 0;
+        height: 40px;
+        width: 100%;
+        box-shadow: 0 4px 15px #19191f;
+    }
+
+    .inner {
+        background: white;
+        //border-radius: 5px;
+        height: 100%;
+        box-sizing: border-box;
+        padding: 21px;
+        position: relative;
+        width: 217px;
+
+        @include appnav {
+            width: 100%;
+            padding: 4px 10px;
+        }
+
     }
 }
