--- a/css/_defaults.scss
+++ b/css/_defaults.scss
@@ -143,11 +143,12 @@ body {
         
     }
     
-    .header-large {
+    .header-large, .header-med {
         font-weight: 700;
         font-size: 48px;
         padding-bottom: 0;
         text-transform: uppercase;
+        text-align: center;
         
         @include appnav {
             font-size: 36px;
@@ -173,10 +174,7 @@ body {
     }
     
     .header-med {
-        font-weight: 700;
         font-size: 48px;
-        padding-bottom: 0;
-        text-transform: uppercase;
         padding-top: 40px;
 
         @include appnav {
@@ -184,17 +182,10 @@ body {
         }
 
         & + p {
-            margin-top: -30px;
-            padding-top: 0;
-            padding-bottom: 30px;
             padding-bottom: 40px;
-            color: $cTextDefault;
-            text-align: center;
-            font-size: 18px;
 
             @include appnav {
                 margin-top: -20px;
-                font-size: 16px;
             }
 
             strong {
