--- a/css/_defaults.scss
+++ b/css/_defaults.scss
@@ -25,6 +25,7 @@ body {
     //background-image: url(../media/bg_815decacfdebafd683c2c3272857337b.jpg);
     background-size: cover;
     background-attachment: fixed;
+    background: #444c7b;
     
     @include appnav {
         padding-bottom: 30px;
@@ -76,7 +77,7 @@ body {
 
     p {
         color: $cTextDefault;
-        line-height: 1.5;
+        line-height: 1.6;
         text-align: justify;
         
 
@@ -86,6 +87,7 @@ body {
         
         &.find-me-on {
             margin-top: 20px;
+            margin-top: 65px;
             font-weight: bold;
             color: white !important;
             font-size: 16px;
@@ -221,6 +223,9 @@ body {
 
 #me {
     margin-bottom: 60px;
+    display: flex;
+    min-height: calc(100vh - 95px);
+    
     @include mobile {
         margin-top: -40px;
     }
