New header font

--- a/css/_defaults.scss
+++ b/css/_defaults.scss
@@ -86,6 +86,7 @@ body {
         }
         
         &.find-me-on {
+            font-family: "Poppins", Helvetica, Arial, sans-serif;
             margin-top: 20px;
             margin-top: 65px;
             font-weight: bold;
@@ -147,6 +148,7 @@ body {
     }
     
     .header-large, .header-med {
+        font-family: "Poppins", Helvetica, Arial, sans-serif;
         font-weight: 700;
         font-size: 48px;
         padding-bottom: 0;
@@ -317,7 +319,7 @@ p {
 }
 
 .sidebar {
-
+    font-family: "Poppins", Helvetica, Arial, sans-serif;
 }
 
 
