--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -32,6 +32,7 @@
         }
     }
     h3 {
+        font-family: "Poppins", Helvetica, Arial, sans-serif;
         margin: 0;
         font-size: 24px;
         padding-bottom: 12px;
@@ -63,6 +64,7 @@
 .tags {
     @extend clear;
     span {
+        font-family: "Poppins", Helvetica, Arial, sans-serif;
         float: left;
         line-height: 1;
         font-size: 13px;
