Font adjustments, cache invalidation

--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -44,6 +44,7 @@
         }
         
         a {
+            font-family: "Poppins", Helvetica, Arial, sans-serif;
             width: 216px;
             border-radius: 100px;
             color: #201237;
