--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -21,6 +21,7 @@
         margin-bottom: 25px;
         border-radius: 4px;
         box-shadow: 0 5px 10px -3px rgba(25, 22, 29, 0.3);
+        box-shadow: 0 13px 13px -3px rgba(25,22,29,0.4);
         transition: opacity 0.23s;
         background: rgba(18, 18, 31, 0.25);
         
